# MemoryCuratorRepo

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-databricks.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: LAUNCH_POST.md  MEMORYCURATOR_PROJECT_STORY.md  MemoryCurator_Flow_Diagram.drawio  OPEN_SOURCE_CHECKLIST.md  PROMPT_ONLY_WORKFLOW.md  TECHNICAL_DESIGN.md  linkedin_post.md  memorycurator_linkedin_article.md  memorycurator_linkedin_article_linkedin_editor.md  memorycurator_linkedin_article_v2.md
memory_curator_engine/: __init__.py  __main__.py  cli.py
memory_curator_engine/albums/: __init__.py  report.py
memory_curator_engine/common/: __init__.py  activity.py  ai.py  config.py  execution.py  media.py  media_sets.py  paths.py  phase_runner.py  phases.py  reset.py
memory_curator_engine/dedupe/: __init__.py  report.py
memory_curator_engine/documentary/: __init__.py  report.py
memory_curator_engine/inventory/: __init__.py  __main__.py  metadata.py  report.py
memory_curator_engine/reels/: __init__.py  report.py
memory_curator_engine/scoring/: __init__.py  report.py
memory_curator_engine/selected_timeline/: __init__.py  report.py
memory_curator_engine/story/: __init__.py  report.py
memory_curator_engine/time_capsule/: __init__.py
prompts/: album_builder_phase.md  documentary_builder_phase.md  duplicate_detection_phase_1.md  quality_scoring_phase.md  reel_builder_phase.md  selected_timeline_phase.md  story_builder_phase.md  video_processing_engine_phase.md
(+4 files in other folders)
